--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,18 +16,22 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v3
+        with:
+          node-version: '16' # Stelle sicher, dass die Node-Version angegeben ist
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: npm install
+        working-directory: ./react-frontend # Setze das Arbeitsverzeichnis
 
       - name: Build project
         run: npm run build
+        working-directory: ./react-frontend # Setze das Arbeitsverzeichnis
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./react-frontend/dist # Setze das korrekte Verzeichnis
 
   deploy:
     name: Deploy
@@ -40,10 +44,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: production-files
-          path: ./dist
+          path: ./react-frontend/dist # Setze das korrekte Verzeichnis
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./react-frontend/dist # Setze das korrekte Verzeichnis
